--- a/docker-compose.roundcube.yml
+++ b/docker-compose.roundcube.yml
@@ -6,7 +6,7 @@ services:
     hostname: ${MAILCOW_HOSTNAME}
     environment:
       - TZ=${TZ}
-      - ROUNDCUBEMAIL_DEFAULT_HOST=${MAILCOW_HOSTNAME}
+      - ROUNDCUBEMAIL_DEFAULT_HOST=tls://${MAILCOW_HOSTNAME}
       - ROUNDCUBEMAIL_DEFAULT_PORT=143
       - ROUNDCUBEMAIL_SMTP_SERVER=postfix
       - ROUNDCUBEMAIL_SMTP_PORT=588
