--- a/docker-compose.phpmyadmin.yml
+++ b/docker-compose.phpmyadmin.yml
@@ -11,6 +11,6 @@ services:
     dns:
       - ${IPV4_NETWORK:-172.22.1}.254
     networks:
-      openemail-network:
+      mailcow-network:
         aliases:
           - phpmyadmin
